KAFKA-18894: Add KIP-877 support for ConfigProvider